stage/bck/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"certmanager.k8s.io/cluster-issuer":"letsencrypt","kubernetes.io/ingress.class":"nginx"},"name":"grafana-ingress","namespace":"monitoring"},"spec":{"rules":[{"host":"grafana.stage.bookful.inceptionxr.com","http":{"paths":[{"backend":{"serviceName":"grafana","servicePort":3000},"path":"/"}]}}],"tls":[{"hosts":["grafana.stage.bookful.inceptionxr.com"],"secretName":"grafana-tls"}]}}
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2019-01-15T12:42:40Z"
  generation: 29
  name: grafana-ingress
  namespace: monitoring
  resourceVersion: "727158234"
  uid: 0bc715fa-18c3-11e9-af3e-42010a800019
spec:
  rules:
  - host: grafana.stage.bookful.inceptionxr.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - grafana.stage.bookful.inceptionxr.com
    secretName: grafana-tls
status:
  loadBalancer:
    ingress:
    - ip: 35.193.54.34
